--- a/css/styles.css
+++ b/css/styles.css
@@ -5,27 +5,6 @@
     ;
 }
 
-:root {
-    --golden-color: #C28B1F;
-    --light-color: #FFFDF0;
-
-    --height-footer: clamp(25%, 0%, 500px);
-
-    /* VUURWERK */
-    --inner-ring-color: dimgray;
-    --inner-boom-color: dimgray;
-    --outer-boom-color: dimgray;
-    --inner-boom-width: 10px;
-    --outer-boom-width: 8px;
-    --div-trail: dimgray;
-    --inner-boom-translateY: -40px;
-    --outer-boom-translateY: -60px;
-    --outer-boom-deg: 115deg;
-    --highlight-color: #e8dfcb;
-    --inner-ring-width: 20px;
-    --inner-boom-height: 200px;
-    --outer-boom-height: 200px;
-}
 
 h1,
 h2,
@@ -52,8 +31,14 @@ label {
     gap: .2em;
 }
 
-input[data-start] {
+input[value="customize"],
+input[value="startshow"] {
     display: none;
+}
+
+label:has(input[value="customize"]),
+label:has(input[value="startshow"]) {
+    cursor: pointer;
 }
 
 select,
@@ -83,11 +68,16 @@ body {
     background-color: #272727;
 }
 
+main {
+    overflow: hidden;
+    /* kan weg, als main is veranderd */
+}
+
 header {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: max-content;
+    height: var(--height-header);
     flex-direction: column;
     background-color: #191919;
     padding: 1em;
@@ -175,7 +165,6 @@ footer {
                 gap: 1em;
                 margin-bottom: 1em;
 
-
             }
 
             fieldset {
@@ -184,55 +173,27 @@ footer {
                 flex-direction: column;
                 padding: 1em;
 
+                input,
+                label {
+                    cursor: pointer;
+                }
 
-                >div:first-of-type {
+                div {
                     display: flex;
                     flex-direction: column;
                     gap: .5em;
 
 
-                    div {
+                    div, label {
                         display: flex;
                         flex-direction: row;
-                        gap: .2em;
-                        justify-content: space-between;
                         align-items: center;
+                        justify-content: space-between;
+                        gap: 1em;
+                        user-select: none;
 
-                        /* COLOR LABELS */
-                        div:has(label[for="pink-innerring"]),
-                        div:has(label[for="pink-innerboom"]),
-                        div:has(label[for="pink-outerboom"]) {
-                            padding: 0.1em 0.5em;
-                            border-radius: 5px;
-                            background-color: hotpink;
-                            color: white;
-                        }
-
-                        div:has(label[for="purple-innerring"]),
-                        div:has(label[for="purple-innerboom"]),
-                        div:has(label[for="purple-outerboom"]) {
-                            padding: 0.1em 0.5em;
-                            border-radius: 5px;
-                            background-color: rebeccapurple;
-                            color: white;
-                        }
-
-                        div:has(label[for="blue-innerring"]),
-                        div:has(label[for="blue-innerboom"]),
-                        div:has(label[for="blue-outerboom"]) {
-                            padding: 0.1em 0.5em;
-                            border-radius: 5px;
-                            background-color: darkblue;
-                            color: white;
-                        }
-
-                        div:has(label[for="orange-innerring"]),
-                        div:has(label[for="orange-innerboom"]),
-                        div:has(label[for="orange-outerboom"]) {
-                            padding: 0.1em 0.5em;
-                            border-radius: 5px;
-                            background-color: orange;
-                            color: white;
+                        div:first-of-type {
+                            gap: .2em;
                         }
                     }
                 }
@@ -336,26 +297,56 @@ footer {
     }
 }
 
-/* op basis van selectie die aan is moet display aan out. */
-div[data-customizeMenu] section:first-of-type:has(input[value="innerring"]:checked)+fieldset[data-innerring] {
-    display: flex;
+fieldset[data-innerring] div div:first-of-type label,
+fieldset[data-innerboom] div div:first-of-type label,
+fieldset[data-outerboom] div div:first-of-type label,
+fieldset[data-innerring] div div:last-of-type label {
+    border: 1px solid var(--light-color);
+    border-radius: 5px;
+    padding: .3em .6em;
 }
 
-div[data-customizeMenu] section:first-of-type:has(input[value="innerboom"]:checked)~fieldset[data-innerboom] {
-    display: flex;
+fieldset[data-innerring] div div:first-of-type label input,
+fieldset[data-innerboom] div div:first-of-type label input,
+fieldset[data-outerboom] div div:first-of-type label input,
+fieldset[data-innerring] div div:last-of-type label input{
+    display: none;
 }
 
-div[data-customizeMenu] section:first-of-type:has(input[value="outerboom"]:checked)~fieldset[data-outerboom] {
-    display: flex;
+
+fieldset[data-innerring] div div:first-of-type label:has(input:checked),
+fieldset[data-innerboom] div div:first-of-type label:has(input:checked),
+fieldset[data-outerboom] div div:first-of-type label:has(input:checked),
+fieldset[data-innerring] div div:last-of-type label:has(input:checked),
+fieldset[data-innerboom] div div:last-of-type label:has(input:checked),
+fieldset[data-outerboom] div div:last-of-type label:has(input:checked) {
+    color: var(--light-color);
+    border: 2px solid var(--golden-color);
+    box-shadow: var(--box-shadow);
 }
 
-div[data-customizeMenu] section:first-of-type:has(input[value="innerring"]:checked)>label:first-of-type,
-div[data-customizeMenu] section:first-of-type:has(input[value="innerboom"]:checked)>label:nth-of-type(2),
-div[data-customizeMenu] section:first-of-type:has(input[value="outerboom"]:checked)>label:nth-of-type(3) {
-    background-color: #C28B1F;
-    padding: .5em 1em;
-    border-radius: 2px;
-    color: white;
+fieldset[data-innerring] div div:last-of-type label:has(input:checked),
+fieldset[data-innerboom] div div:last-of-type label:has(input:checked),
+fieldset[data-outerboom] div div:last-of-type label:has(input:checked){
+    background-color: #191919;
+}
+
+fieldset[data-innerring] div div:last-of-type label:has(input:checked),
+fieldset[data-innerboom] div div:last-of-type label:has(input:checked),
+fieldset[data-outerboom] div div:last-of-type label:has(input:checked) {
+    color: var(--light-color);
+}
+
+fieldset[data-innerring] div div:first-of-type div label:has(input:checked) {
+    background-color: var(--inner-ring-color);
+}
+
+fieldset[data-innerboom] div div:first-of-type div label:has(input:checked){
+    background-color: var(--inner-boom-color);
+}
+
+fieldset[data-outerboom] div div:first-of-type div label:has(input:checked){
+    background-color: var(--outer-boom-color);
 }
 
 section>label {
@@ -374,190 +365,5 @@ section>label>input {
 section>label:hover {
     background-color: #e4c892;
     border: none;
-    color: black;
-}
-
-
-/* has functie voor het open van de "footer" */
-body:has(input[data-customize]:checked) footer {
-    transform: translateY(0%);
-}
-
-body:has(input[data-customize]:checked)>header {
-    transform: translateY(-100%);
-    transition: all 0.5s ease-in-out;
-}
-
-body:has(input[data-customize]:checked)>main {
-    position: absolute;
-    top: 0;
-    height: calc(100vh - var(--height-footer));
-    transition: all 0.5s ease-in-out;
-    z-index: -1;
-}
-
-body:has(input[data-customize]:checked) main section:first-of-type>div {
-    scale: 1;
-}
-
-/* als de customize option open is dan moeten de animaties stoppen */
-body:has(input[data-customize]:checked) main article:first-of-type section:nth-of-type(1) div::before,
-body:has(input[data-customize]:checked) main article:first-of-type section:nth-of-type(2) div::before,
-body:has(input[data-customize]:checked) main article:first-of-type section:nth-of-type(3) div::before,
-body:has(input[data-customize]:checked) main article:first-of-type section:nth-of-type(3) div::after {
-    animation-play-state: paused;
-}
-
-body:has(input[data-customize]:checked) main article:first-of-type section:nth-of-type(1) div::before {
-    scale: 1;
-}
-
-
-body:has(input[data-customize]:checked)>main article:first-of-type {
-    width: 50vmin;
-    aspect-ratio: 1;
-    margin: 0.5em;
-}
-
-/* has function voor menu open */
-body:has(input[data-customize]:checked) main section:nth-of-type(1) div,
-body:has(input[data-customize]:checked) main section:nth-of-type(2) div,
-body:has(input[data-customize]:checked) main section:nth-of-type(3) div {
-    background: var(--div-trail);
-}
-
-body:has(input[value="innerring"]:checked) main section:nth-of-type(1) div {
-    border: var(--border-with) solid var(--highlight-color);
-    scale: 1;
-}
-
-/* innerboom highlighted */
-body:has(input[value="innerboom"]:checked) main section:nth-of-type(2) div {
-    border: var(--border-with) solid var(--highlight-color);
-}
-
-/* outerboom highlighted */
-body:has(input[value="outerboom"]:checked) main section:nth-of-type(3) div {
-    border: var(--border-with) solid var(--highlight-color);
-    border: var(--border-with) solid var(--highlight-color);
-}
-
-/* START SHOW */
-body:has(input[data-start]:checked) main article:first-of-type section:nth-of-type(1) div::before,
-body:has(input[data-start]:checked) main article:first-of-type section:nth-of-type(2) div::before,
-body:has(input[data-start]:checked) main article:first-of-type section:nth-of-type(3) div::before,
-body:has(input[data-start]:checked) main article:first-of-type section:nth-of-type(3) div::after {
-    animation-play-state: running;
-}
-
-/* has function voor menu open */
-body:has(input[data-start]:checked) main section:nth-of-type(1) div,
-body:has(input[data-start]:checked) main section:nth-of-type(2) div,
-body:has(input[data-start]:checked) main section:nth-of-type(3) div {
-    background: transparent;
-}
-
-body:has(input[data-start]:checked) footer {
-    transform: translateY(100%);
-}
-
-body:has(input[data-start]:checked) footer {
-    transform: translateY(100%);
-}
-
-body:has(input[data-start]:checked) header {
-    transform: translateY(0%);
-}
-
-/* HAS VOOR HET VERANDEREN VAN DE KLEUREN */
-
-/* inner ring */
-body:has(input[value="hotpink-innerring"]:checked) main section:first-of-type>div {
-    border: var(--border-with) solid hotpink;
-    --div-trail: hotpink;
-}
-
-body:has(input[value="rebeccapurple-innerring"]:checked) main section:first-of-type>div {
-    border: var(--border-with) solid rebeccapurple;
-    --div-trail: rebeccapurple;
-}
-
-body:has(input[value="dodgerblue-innerring"]:checked) main section:first-of-type>div {
-    border: var(--border-with) solid dodgerblue;
-    --div-trail: dodgerblue;
-}
-
-body:has(input[value="orange-innerring"]:checked) main section:first-of-type>div {
-    border: var(--border-with) solid orange;
-    --div-trail: orange;
-}
-
-/* inner boom */
-body:has(input[value="hotpink-innerboom"]:checked) main section:nth-of-type(2) div,
-body:has(input[value="hotpink-innerboom"]:checked) main section:nth-of-type(2) div::before {
-    border: hotpink;
-    --inner-boom-color: hotpink;
-    --div-trail: hotpink;
-}
-
-body:has(input[value="rebeccapurple-innerboom"]:checked) main section:nth-of-type(2) div {
-    border: rebeccapurple;
-    --inner-boom-color: rebeccapurple;
-    --div-trail: rebeccapurple;
-}
-
-body:has(input[value="dodgerblue-innerboom"]:checked) main section:nth-of-type(2) div {
-    border: dodgerblue;
-    --inner-boom-color: dodgerblue;
-    --div-trail: dodgerblue;
-}
-
-body:has(input[value="orange-innerboom"]:checked) main section:nth-of-type(2) div {
-    border: orange;
-    --inner-boom-color: orange;
-    --div-trail: orange;
-}
-
-/* outer boom */
-body:has(input[value="hotpink-outerboom"]:checked) main section:nth-of-type(3) div {
-    border: hotpink;
-    --outer-boom-color: hotpink;
-    --div-trail: hotpink;
-}
-
-body:has(input[value="rebeccapurple-outerboom"]:checked) main section:nth-of-type(3) div {
-    border: rebeccapurple;
-    --outer-boom-color: rebeccapurple;
-    --div-trail: rebeccapurple;
-}
-
-body:has(input[value="dodgerblue-outerboom"]:checked) main section:nth-of-type(3) div {
-    border: dodgerblue;
-    --outer-boom-color: dodgerblue;
-    --div-trail: dodgerblue;
-}
-
-body:has(input[value="orange-outerboom"]:checked) main section:nth-of-type(3) div {
-    border: orange;
-    --outer-boom-color: orange;
-    --div-trail: orange;
-}
-
-/*  TOEVOEGEN VAN ANIMATIES */
-/* inner boom */
-
-/* preview glow */
-body:has(input[value="innerboom-animatie-glow"]:checked) main section:nth-of-type(2) div,
-body:has(input[value="outerboom-animatie-glow"]:checked) main section:nth-of-type(3) div {
-    animation: Glow var(--animation-dur) ease-in-out;
-}
-
-body:has(input[value="innerboom-animatie-blur"]:checked) main section:nth-of-type(2) div,
-body:has(input[value="outerboom-animatie-blur"]:checked) main section:nth-of-type(3) div {
-    animation: Blur var(--animation-dur) ease-in-out;
-}
-
-body:has(input[value="innerboom-animatie-knetter"]:checked) main section:nth-of-type(2) div,
-body:has(input[value="outerboom-animatie-knetter"]:checked) main section:nth-of-type(3) div {
-    animation: Spark var(--animation-dur) ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
