--- a/css/vuurwerk.css
+++ b/css/vuurwerk.css
@@ -1,24 +1,3 @@
-:root {
-    --inner-ring-color: dimgray;
-    --inner-boom-color: dimgray;
-    --outer-boom-color: dimgray;
-    --highlight-color: #e8dfcb;
-    --div-trail: dimgray;
-
-
-    --inner-boom-width: 10px;
-    --outer-boom-width: 8px;
-    --inner-boom-translateY: -40px;
-    --outer-boom-translateY: -60px;
-    --outer-boom-deg: 115deg;
-    --inner-ring-width: 20px;
-    --inner-border-with: 8px;
-    --inner-boom-height: 200px;
-    --outer-boom-height: 200px;
-
-    --animation-dur: 10s;
-}
-
 /* VUURWERK */
 main {
     display: flex;
@@ -40,7 +19,7 @@ main article:first-of-type::after {
     content: "";
     width: 1rem;
     height: 1rem;
-    background: white;
+    background: var(--inner-ring-color);
     position: absolute;
     transform: translateY(50%);
     border-radius: 50%;
@@ -84,13 +63,6 @@ main section:nth-of-type(3) div {
     height: 50px;
 }
 
-/* div trails */
-main section:nth-of-type(1) div,
-main section:nth-of-type(2) div,
-main section:nth-of-type(3) div {
-    /* background: var(--div-trail); */
-}
-
 /* Algemene regels boom before */
 main section:nth-of-type(2) div::before,
 main section:nth-of-type(3) div::before {
@@ -102,23 +74,23 @@ main section:nth-of-type(3) div::before {
 }
 
 
-/* INNER CIRCLE */
-main section:first-of-type>div {
+/* INNER RING */
+main section:first-of-type > div,
+main section:first-of-type > div::before {
     width: var(--inner-ring-width);
     aspect-ratio: 1;
     border-radius: 50%;
-    border: var(--border-with) solid var(--div-trail);
+}
+
+main section:first-of-type>div {
     display: flex;
 }
 
 main section:first-of-type>div::before {
     content: '';
-    width: 50px;
-    aspect-ratio: 1;
     scale: 0;
     transform-origin: center;
-    border-radius: 50%;
-    border: var(--inner-border-with) solid var(--div-trail);
+    border: var(--inner-ring-border-width) solid var(--inner-ring-color);
 }
 
 /* INNER BOOM  */
@@ -190,7 +162,7 @@ main section:nth-of-type(3)>div::after {
     left: 0;
     top: -30%;
     opacity: 0;
-    background: radial-gradient(var(--div-trail), white);
+    background: radial-gradient(var(--outer-boom-color), white);
 }
 
 /* OUTER BOOM */
@@ -260,3 +232,4 @@ main section:nth-of-type(3)>div::before {
 main section:nth-of-type(3)>div::after {
     animation: explosionOuterBoomAfter var(--animation-dur) cubic-bezier(.1, .41, .74, .56) infinite;
 }
+
